<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AndroidMpdClient</string>
    <string name="play_button_text">&gt;</string>
    <string name="pause_button_text">||</string>
    <string name="search_button_text">V</string>
    <string name="stop_button_text">[]</string>
    <string name="back_button_text">&lt;&lt;</string>
    <string name="forward_button_text">&gt;&gt;</string>
    <string name="settings_button_text">*</string>
    <string name="mpd_server_label_text">Server:</string>
    <string name="mpd_port_label_text">Port:</string>
    <string name="save_settings_button_text">Save</string>
</resources>
