<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
  <TextView android:id="@+id/mpd_server_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mpd_server_label_text" />
  <EditText android:id="@+id/mpd_server_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
  <TextView android:id="@+id/mpd_port_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mpd_port_label_text" />
  <EditText android:id="@+id/mpd_port_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="6600"/>
  <Button android:id="@+id/save_settings_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/save_settings_button_text"/>

</LinearLayout>

